--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
-    "expo": "^54.0.23",
+    "expo": "^54.0.25",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
@@ -55,6 +55,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
