--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "install-deps": "npm ci || npm install",
     "build:web": "npx expo export --output-dir web-build -p web",
     "build": "npm run build:web",
-    "deploy": "echo \"Deployment is handled by GitHub Actions (see .github/workflows/deploy.yml)\""
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d web-build"
   },
   "homepage": "https://Griffanian.github.io/CircleTracker",
   "dependencies": {
@@ -55,7 +56,6 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
