--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       "expo-web-browser"
     ],
     "experiments": {
-      "reactCompiler": true
-    }
-  }
+    "reactCompiler": true,
+    "baseUrl": "/CircleTracker"
+  }}
 }
