--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
