Restored to 'f7fe38cab6d07d98a5ee84005d98326796f83929'
Replit-Restored-To: f7fe38cab6d07d98a5ee84005d98326796f83929

--- a/app.json
+++ b/app.json
@@ -25,8 +25,7 @@
     },
     "web": {
       "output": "single",
-      "favicon": "./assets/images/favicon.png",
-      "bundler": "metro"
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       [
@@ -44,7 +43,7 @@
       "expo-web-browser"
     ],
     "experiments": {
-    "reactCompiler": true,
-    "baseUrl": "/CircleTracker"
-  }}
+      "reactCompiler": true
+    }
+  }
 }
