--- a/package.json
+++ b/package.json
@@ -10,13 +10,8 @@
     "web": "npx expo start --web",
     "lint": "npx expo lint",
     "check:format": "prettier --check \"**/*.{js,ts,tsx,css,json}\"",
-    "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\"",
-    "install-deps": "npm ci || npm install",
-    "build:web": "npx expo export --output-dir docs -p web",
-    "build": "npm run build:web",
-    "postbuild": "cp docs/index.html docs/404.html"
+    "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\""
   },
-  "homepage": "https://Griffanian.github.io/CircleTracker",
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -25,7 +20,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
-    "expo": "^54.0.25",
+    "expo": "^54.0.23",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
@@ -56,7 +51,6 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
